converted to arrow funtions

--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -5,6 +5,7 @@
   padding: 0.5rem;
   margin: 1rem 0;
   background-color: #4b4b4b;
+  border-radius: 12px;
 }
 
 .expense-item__description {
@@ -15,6 +16,7 @@
   flex-flow: column-reverse;
   justify-content: flex-start;
   flex: 1;
+  
 }
 
 .expense-item h2 {
